finished babel compiling

--- a/src/components/am-heading.html
+++ b/src/components/am-heading.html
@@ -11,7 +11,7 @@
   </div>
 </template>
 <script>
-  export class AmHeadingElement extends AmElement {
+  class AmHeadingElement extends AmElement {
 
   }
 </script>
